--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /POO/Final/Ejercicio1/nbproject/private/
 /POO/Final/Ejercicio1/build/
 /POO/Final/Ejercicio2/nbproject/private/
+/POO/Final/Ejercicio2/build/
