Agrego mas resoluciones de ejercicios

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /POO/Final/Ejercicio1/build/
 /POO/Final/Ejercicio2/nbproject/private/
 /POO/Final/Ejercicio2/build/
+/POO/Final/Ejercicio3/nbproject/private/
+/POO/Final/Ejercicio3/build/
