Agrego mas ejercicios

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /POO/Final/Ejercicio2/build/
 /POO/Final/Ejercicio3/nbproject/private/
 /POO/Final/Ejercicio3/build/
+/POO/Final/Ejercicio4/nbproject/private/
+/POO/Final/Ejercicio4/build/
