Agrego mi final y mas ejercicios

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /POO/Final/Ejercicio3/build/
 /POO/Final/Ejercicio4/nbproject/private/
 /POO/Final/Ejercicio4/build/
+/POO/Final/Ejercicio7/nbproject/private/
+/POO/Final/Ejercicio7/build/
